--- a/4IV8_Proyecto_Aula_Equipo6_Codyrep-master/ETS&ITS.html
+++ b/4IV8_Proyecto_Aula_Equipo6_Codyrep-master/ETS&ITS.html
@@ -22,9 +22,9 @@
             <div class="dropdown">
                 <button class="dropbtn">Dropdown</button>
                 <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                  <a href="#causas">Causas y consecuencias</a>
+                  <a href="#sintomas">Sintomas</a>
+                  
                 </div>
             </div>
             <div class="dropdown">
@@ -40,28 +40,56 @@
             </div>
             <h2>Ets & its</h2>
                 <br>
-                <p>Nuestro Principal objetivo es crear un espacio libre, gratuito y seguro en donde personas puedan compartir experiencias
-                    y "tips" sobre educación sexual.  
+                <p>Las enfermedades de transmisión sexual (ETS) o infecciones de transmisión sexual (ITS) son infecciones que se transmiten de una persona a otra a través del contacto sexual. El contacto suele ser vaginal, oral y anal. Pero a veces pueden transmitirse a través de otro contacto físico íntimo. Esto se debe a que algunas ETS, como el herpes y el VPH, se transmiten por contacto de piel a piel.  
                 </p>
                 <br>
-                <p>
-                    Seremos un foro donde la gente pueda hacer pueda hacer preguntas y otros usuarios responderlas para asi tener un espacio libre y seguro para que la gente pueda estar comoda con su sexualidad cualquiera que sea.
+                <p>Hay más de 20 tipos de ETS, incluyendo:
+                    <ul style="list-style-type: none;">
+                        <li>Clamidia</li>
+                        <li>Herpes Genital</li>
+                        <li>Gonorra</li>
+                        <li>VIH y Sida</li>
+                        <li>VPH</li>
+                        <li>Ladillas</li>
+                        <li>Sifilis</li>
+                        <li>Tricomoniasis</li>
+                    </ul>
                 </p>
-                <h3>
-                    Misión:
+                <h3 id="causas">
+                    Causas y consecuencias
                 </h3>
                 <br>
                 <p>
-                    Somos una empresa conformada por jóvenes estudiantes que nos dedicamos al desarrollo de software para la automatización de  procesos  y páginas de interés por medio de aplicaciones digitales en plataformas conocidas que ayudan al público general a realizar actividades u operaciones que le parezcan difíciles y que puedan ser solucionadas con algún programa, aplicación o servicio web. Tenemos como cliente objetivo negocios, empresas y personas cercanas al establecimiento. Además buscamos la excelencia en nuestros proyectos acompañada de la comodidad de nuestros clientes. 
+                    Las causas de las ETS pueden ser bacterias, virus y parásitos. 
                 </p>
                 <br>
-                <h3>
-                    Visión:
+                <p>
+                    La mayoría de las ETS afectan a hombres y a mujeres, pero en muchos casos los problemas de salud que causan pueden ser más graves en mujeres. Si una embarazada tiene una ETS, puede causarle graves problemas de salud al bebé. 
+                </p>
+                <br>
+                <h3 id="sintomas">
+                    sintomas
                 </h3>
                 <br>
                 <p>
-                    Lo que queremos es la facilitación de procesos a través de la digitalización de los mismos y el dar información de temas de interés a los clientes, pretendemos llegar a ser una empresa amigable y confiable para quien lo necesite, queremos llegar a tener varios proyectos para hacernos más conocidos en la comunidad, deseamos ser vistos como una empresa accesible que responda a todas sus necesidades, nuestros valores son la honestidad con cualquier cliente, responsabilidad ante cualquier proyecto, confianza a los usuarios y lealtad a los mismos, nuestro objetivo es llegar a ser conocidos por medio de los diversos proyectos hechos tales como páginas web o aplicaciones de escritorio, se espera que esto suceda en un plazo de 1 a 2 años.
+                    Las ETS no siempre presentan síntomas, o solo pueden causar síntomas leves. Por lo mismo, es posible tener una infección y no saberlo, aunque de todas formas se pueda transmitir a otras personas.
                 </p>
+                <p>
+                    Si hay síntomas, pueden incluir:
+                    <ul style="list-style-type: none;">
+                        <li>Sercreción inusual en el pene o la vagina</li>
+                        <li>Llagas o verrugas en el área genital</li>
+                        <li>Micción frecuente o dolorosa</li>
+                        <li>Picazón y enrojecimiento en el área genital</li>
+                        <li>Ampollas o llagas en o alrededor de la boca</li>
+                        <li>Olor vaginal anormal</li>
+                        <li>Picazoón, dolor o sangrado anal</li>
+                        <li>dolor abdominal</li>
+                        <li>fiebre</li>
+                    </ul>
+                </p>
+                <img src="./Images/itsjiji.jpg" >
+                <br>
                 <button><a href="#top"><i class="fas fa-arrow-up"></i> Volver</a></button>
                 <br><br><br>
         </div>
