--- a/4IV8_Proyecto_Aula_Equipo6_Codyrep-master/MetodosAnti.html
+++ b/4IV8_Proyecto_Aula_Equipo6_Codyrep-master/MetodosAnti.html
@@ -20,11 +20,10 @@
         <div class="Texto">
             <button><a href="./Topics.html"><i class="fas fa-angle-double-left"></i> Regresar</a></button>
             <div class="dropdown">
-                <button class="dropbtn">Dropdown</button>
+                <button class="dropbtn">Subtemas</button>
                 <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                  <a href="#masculinos">anticonceptivos masculinos</a>
+                  <a href="#femeninos">anticonceptivos femeninos</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -40,29 +39,124 @@
             </div>
             <h2>Metodos anticonceptivos</h2>
                 <br>
-                <p>Nuestro Principal objetivo es crear un espacio libre, gratuito y seguro en donde personas puedan compartir experiencias
-                    y "tips" sobre educación sexual.  
+                <p>Los métodos anticonceptivos son las diferentes maneras que hay de prevenir el embarazo. Existen muchos tipos de anticonceptivos, por lo que tienes varias opciones para elegir la que mejor se adapta a ti. Aquí encontrarás la información que necesitas sobre cada uno de ellos. Estamos para ayudarte a entenderlo todo.  
                 </p>
                 <br>
                 <p>
-                    Seremos un foro donde la gente pueda hacer pueda hacer preguntas y otros usuarios responderlas para asi tener un espacio libre y seguro para que la gente pueda estar comoda con su sexualidad cualquiera que sea.
+                    Elige lo más importante para ti a la hora de escoger un método anticonceptivo:
                 </p>
-                <img src="">
-                <h3>
-                    Misión:
+                <img src="./Images/Anticonceptivos.jpg">
+                <h3 id="masculinos">
+                     anticonceptivos Masculinos:
                 </h3>
                 <br>
                 <p>
-                    Somos una empresa conformada por jóvenes estudiantes que nos dedicamos al desarrollo de software para la automatización de  procesos  y páginas de interés por medio de aplicaciones digitales en plataformas conocidas que ayudan al público general a realizar actividades u operaciones que le parezcan difíciles y que puedan ser solucionadas con algún programa, aplicación o servicio web. Tenemos como cliente objetivo negocios, empresas y personas cercanas al establecimiento. Además buscamos la excelencia en nuestros proyectos acompañada de la comodidad de nuestros clientes. 
+                    Los métodos anticonceptivos masculinos que existen son la vasectomía y el preservativo, los cuales impiden que el espermatozoide llegue al óvulo y se produzca el embarazo. El preservativo es el método anticonceptivo más utilizado por los hombres, debido a que es práctico, reversible, eficaz y, además, proporciona protección contra infecciones de transmisión sexual. 
                 </p>
                 <br>
                 <h3>
-                    Visión:
+                    1. Preservativo
                 </h3>
                 <br>
                 <p>
-                    Lo que queremos es la facilitación de procesos a través de la digitalización de los mismos y el dar información de temas de interés a los clientes, pretendemos llegar a ser una empresa amigable y confiable para quien lo necesite, queremos llegar a tener varios proyectos para hacernos más conocidos en la comunidad, deseamos ser vistos como una empresa accesible que responda a todas sus necesidades, nuestros valores son la honestidad con cualquier cliente, responsabilidad ante cualquier proyecto, confianza a los usuarios y lealtad a los mismos, nuestro objetivo es llegar a ser conocidos por medio de los diversos proyectos hechos tales como páginas web o aplicaciones de escritorio, se espera que esto suceda en un plazo de 1 a 2 años.
+                    El preservativo, también llamado condón, es el método anticonceptivo más utilizado por los hombres y por las mujeres, puesto que además de evitar el embarazo, protege contra enfermedades de transmisión sexual.
                 </p>
+                <p>
+                    Además, no promueve ninguna alteración hormonal o en el proceso de producción y liberación de espermatozoides, siendo completamente reversible.
+                </p>
+                <br>
+                <h3>
+                    2. Vasectomía
+                </h3>
+                <br>
+                <p>
+                    La vasectomía es un método anticonceptivo masculino que consiste en el corte del canal que une el testículo al pene y que conduce los espermatozoides, evitando que se de la liberación de los mismos en la eyaculación y, por ende, el embarazo.
+                </p>
+                <p>
+                    Este método anticonceptivo por lo general es realizado en los hombres que no deseas tener más hijos y se lleva a cabo de forma rápida en el consultorio médico.
+                </p>
+                <br>
+                <h3>
+                    3. Anticonceptivo en gel
+                </h3>
+                <br>
+                <p>
+                    El anticonceptivo en gel, conocido como Vasalgel, debe aplicarse en los canales deferentes, que son aquellos que conducen los espermatozoides desde los testículos al pene, y actúa bloqueando el paso de los espermatozoides hasta por 10 años. Sin embargo, es posible revertir el efecto a través de la aplicación de una inyección de bicarbonato de sodio en la zona, lo que pocas veces es posible en la vasectomía. 
+                </p>
+                <p>
+                    El Vasalgel no tiene contraindicaciones ni modifica la producción de hormonas masculinas, no obstante, aún se encuentra en período de pruebas.
+                </p>
+                <br>
+                <h3>
+                    4. Píldora anticonceptiva masculina
+                </h3>
+                <br>
+                <p>
+                    La píldora anticonceptiva masculina, cuyo nombre es undecanoato de dimetandrolona (DMAU), es una píldora constituida por derivados e hormonas femeninas, que actúa disminuyendo la cantidad de testosterona, que a su vez disminuye la producción de espermatozoides y su motilidad; interfiriendo de forma temporal en la fertilidad del hombre.
+                </p>
+                <p>
+                    Pese a que ya ha sido probado en algunos hombres, la píldora anticonceptiva masculina aún no está disponible debido a los efectos secundarios relatados por los hombres, como disminución de la libido, alteraciones de humos y aumento de acné.
+                </p>
+                <br>
+                <h3>
+                    5. Inyección anticonceptiva
+                </h3>
+                <br>
+                <p>
+                    Recientemente, fue desarrollada una inyección llamada RISUG, compuesta por sustancias llamadas polímeros, la cual es aplicada en el canal por donde pasan los espermatozoides, bajo anestesia local. Esta inyección bloquea la eyaculación, evitando la salida de espermatozoides durante el acto sexual. La acción del medicamento dura alrededor de 10 a 15 años. 
+                </p>
+                <p>
+                    En caso de que el hombre quiera revertir la acción de la inyección, se puede aplicar otros medicamento que libera los espermatozoides.
+                </p>
+                <br>
+                <h3 id="femeninos">
+                    Anticonceptivos femeninos:
+                </h3>
+                <br>
+                <p>
+                    Dentro de los métodos a corto plazo se encuentran el preservativo femenino, el diafragma, la píldora, el anillo y el parche hormonal. y en esta sección entraremos a eplicar a detalle algunos de los más utilizados. 
+                </p>
+                <br>
+                <h3>
+                    1. Preservativo femenino
+                </h3>
+                <br>
+                <p>
+                    Es una funda delgada transparente que se coloca en la vagina antes de la penetración para que durante el coito el pene esté cubierto y el semen quede almacenado.
+                </p>
+                <br>
+                <h3>
+                    2. diafragma
+                </h3>
+                <br>
+                <p>
+                    Es un capuchón de látex suave que se coloca la mujer en la vagina, antes del acto sexual, y se ajusta al cerviz (cuello de la matriz) y hace de barrera física al esperma.
+                </p>
+                <br>
+                <h3>
+                    3. diu de cobre
+                </h3>
+                <br>
+                <p>
+                    El dispositivo intrauterino (DIU) es un pequeño aparato de plástico y cobre, generalmente en forma de T. Mide entre 2,5 y 3,5 cm de largo y 1,5 cm de ancho. Se inserta en la cavidad uterina a través del cérvix para evitar el embarazo, y la mujer lo lleva de forma permanente.
+                </p>
+                <br>
+                <h3>
+                    4. parche anticonceptivo
+                </h3>
+                <br>
+                <p>
+                    Es un parche que libera estrógeno y gestágeno para impedir la ovulación y que se coloca cada semana, durante tres semanas, dejando una de descanso durante la menstruación.
+                </p>
+                <br>
+                <h3>
+                    5. anillo vaginal
+                </h3>
+                <br>
+                <p>
+                    Es un aro de plástico, flexible y suave de 5 cm. de diámetro que se coloca en la vagina durante tres semanas, dejando una de descanso durante la menstruación.
+                </p>
+                <br>
                 <button><a href="#top"><i class="fas fa-arrow-up"></i> Volver</a></button>
                 <br><br><br>
         </div>
