--- a/4IV8_Proyecto_Aula_Equipo6_Codyrep-master/Salud.html
+++ b/4IV8_Proyecto_Aula_Equipo6_Codyrep-master/Salud.html
@@ -22,9 +22,8 @@
             <div class="dropdown">
                 <button class="dropbtn">Dropdown</button>
                 <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                  <a href="#mexico">En mexico</a>
+                  <a href="#objetivos">Objetivos de la salud sexual</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -40,27 +39,38 @@
             </div>
             <h2>Salud y Bienestar</h2>
                 <br>
-                <p>Nuestro Principal objetivo es crear un espacio libre, gratuito y seguro en donde personas puedan compartir experiencias
-                    y "tips" sobre educación sexual.  
+                <p>La salud sexual es un estado de bienestar físico, mental y social en relación con la sexualidad. Requiere un enfoque positivo y respetuoso de la sexualidad y de las relaciones sexuales, así como la posibilidad de tener experiencias sexuales placenteras y seguras, libres de toda coacción, discriminación y violencia. 
                 </p>
                 <br>
                 <p>
-                    Seremos un foro donde la gente pueda hacer pueda hacer preguntas y otros usuarios responderlas para asi tener un espacio libre y seguro para que la gente pueda estar comoda con su sexualidad cualquiera que sea.
+                    La salud reproductiva implica la posibilidad de tener una sexualidad satisfactoria y segura, así como la libertad de tener hijos si y cuando se desea.
                 </p>
-                <h3>
-                    Misión:
+                
+                <br>
+                <p>
+                    La Organización Mundial de la Salud, en su publicación Journal Paper promueve con urgencia el aborto legal y seguro como uno de sus derechos reproductivos y derecho fundamental de las mujeres, independientemente de donde vivan. El aborto inseguro se considera una pandemia silenciosa. 
+                </p>
+                <br>
+                <img src="./Images/saludsesuar.jpg">
+                <br>
+                <h3 id="mexico">
+                    En méxico:
                 </h3>
                 <br>
                 <p>
-                    Somos una empresa conformada por jóvenes estudiantes que nos dedicamos al desarrollo de software para la automatización de  procesos  y páginas de interés por medio de aplicaciones digitales en plataformas conocidas que ayudan al público general a realizar actividades u operaciones que le parezcan difíciles y que puedan ser solucionadas con algún programa, aplicación o servicio web. Tenemos como cliente objetivo negocios, empresas y personas cercanas al establecimiento. Además buscamos la excelencia en nuestros proyectos acompañada de la comodidad de nuestros clientes. 
+                    En México se cuenta con la Constitución Política de los Estados Unidos Mexicanos, la Ley General de Población, la Ley General de Salud, la Ley Federal para Prevenir y Eliminar la Discriminación, la Ley General para la Igualdad entre Mujeres y Hombres, el Programa Nacional para la Igualdad de Oportunidades y No Discriminación Contra las Mujeres 2013-2018, el Programa Sectorial de Salud 2013-2018, el Programa Planificación Familiar y Anticoncepción 2013-2018 y la Estrategia Nacional para Prevención del Embarazo en Adolescentes, que respaldan las acciones de planificación familiar, anticoncepción y salud reproductiva.
+
+                    Reconociendo que contamos con instrumentos normativos internacionales y nacionales que exhortan al Estado y a las instituciones respetar irrestrictamente los derechos reproductivos, es importante que conozcamos diversas formas de protección como es el uso de métodos anticonceptivos.
                 </p>
-                <br>
-                <h3>
-                    Visión:
+                <h3 id="objetivos">
+                    Objetivos de la salud sexual
                 </h3>
                 <br>
                 <p>
-                    Lo que queremos es la facilitación de procesos a través de la digitalización de los mismos y el dar información de temas de interés a los clientes, pretendemos llegar a ser una empresa amigable y confiable para quien lo necesite, queremos llegar a tener varios proyectos para hacernos más conocidos en la comunidad, deseamos ser vistos como una empresa accesible que responda a todas sus necesidades, nuestros valores son la honestidad con cualquier cliente, responsabilidad ante cualquier proyecto, confianza a los usuarios y lealtad a los mismos, nuestro objetivo es llegar a ser conocidos por medio de los diversos proyectos hechos tales como páginas web o aplicaciones de escritorio, se espera que esto suceda en un plazo de 1 a 2 años.
+                    El objetivo de los servicios de salud sexual y reproductiva es reducir la morbilidad y mortalidad materna mediante el aumento de disponibilidad de servicios de calidad y el acceso a los mismos.
+                </p>
+                <p>
+                    La aceptación y el acceso a los servicios mejoran si son gratuitos, sensibles a la cultura local y se ofrecen junto a mensajes de promoción de la salud, involucrando a la comunidad en la toma de decisiones. Asimismo, es importante enfatizar la responsabilidad compartida con los hombres y promocionar su participación en la salud sexual y reproductiva, así como introducir servicios adaptados a las adolescentes ya que tienen necesidades médicas específicas en este ámbito.
                 </p>
                 <button><a href="#top"><i class="fas fa-arrow-up"></i> Volver</a></button>
                 <br><br><br>
